--- a/src/app/adminviewprogress/adminviewprogress.component.html
+++ b/src/app/adminviewprogress/adminviewprogress.component.html
@@ -1,162 +1,175 @@
-
-<nav class="navbar navbar-expand-lg ">
-    <!--Start of navigation section-->
-
-      <div class="container-fluid sticky fixed-top " >
-  
-            <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img class ="logo" src="/assets/images/tutLogo.png"> </h1>
-            <img class="toggleMenu" src="/assets/images/icons8-menu.svg" width="80">
-    
-            <!--End of logo-->
-      </div>
-  
-      <!--End of navigation section-->
-</nav>
-
-
-
-<body>
-    <div class = "sideNav"> 
-        
-        <nav class="breadcrumbNav">
-            <ul >
-                <li class = "" id = "breadcrumbpadding"><a class ="" href="#" id="hover">View Request</a></li>
-                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a class ="" href="#" id="hover">View Progress</a></li>
-                <li class = "" id = "breadcrumbpadding"><a class ="" href="#" id="hover">Close logs</a></li>
-               
+<div class="container-fluid">
+  <!-- <body class="container"> -->
+      <div class="log d-flex justify-content-end">
+          <nav class="header">
+              <div id="logoDiv">
+                  <a>
+                   
+                      <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
+                          style="float: left;height: 70px;width: 225px;" routerLink="read">
+                  </a>
+              </div>
+              <div id="menu-icon">
+                  <i class="fas fa-bars"></i>
+              </div>
+              <ul>
+                  <li>
       
-            </ul>
-            
-        </nav>
-        
-    </div>
-    <div class = "contentContainerRight">
-            <form class="backFrom">
-                <div class = "contentForm">
+                      <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
+                              class="btn btn-success">LOGOUT</button></a>
+                  </li>
+              </ul>
+      
+          </nav>
+      </div>
+</div>
+<body>
 
-                    <h3 class = "toptitle">Admin View Progress</h3>
+  <div class="container2 d-flex justify-content-between ">
+      <div class="sideNav">
+          <nav class="breadcrumbNav">
+              <ul>
+                  
+                      <li class = "" id = "breadcrumbpadding"><a class ="" id="hover"  routerLink="/adminpage" >View Requests</a></li>
+                      <li class="breadcrumb-item active" id="breadcrumbpadding"><a class=""  disabled>View Progress</a></li>
+                      <li class = "" id = "breadcrumbpadding"><a class ="" id="hover"  routerLink="" >Close Logs</a></li>
+                      
+              </ul>
+          </nav>
+      </div>
 
-                    
-                        <!--<div id = "card" *ngFor="let all of alldata">
-                            <div class="card " >
-                                <div class="card-body" >
-                                    <div class="card-titles" >
-                                        <h6 class="card-title">Ref:{{all.id}}</h6>
-                                        <h6 class="card-title" id = "date">RequestDate:{{all.req_date
-                                        }}</h6>
+      <div class="tab-content ps-3 mt-4" id="myTabContent">
+
+              <div class = "contentForm" >
+                 
+                  <div class="departmenCategoryText">
+                      <h2>Campus: Soshanguve</h2>
+                      <h4>Department:Electrical</h4>
+                      <h5>Category:</h5>
+                  </div>
+                  
+                  <div class="content card mt-4 p-4">
+
+              
+                      <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Progress</h1>
+
+                      <div class = "contentForm">
+
+                            <nav class="navtab">
+                                <div class="nav nav-tabs progressBtns" id="nav-tab" role="tablist">
+                                  <button class="nav-link  active colorAmber" id="nav-in-progress-tab" data-bs-toggle="tab" data-bs-target="#nav-in-progress" type="button" role="tab" aria-controls="nav-in-progress" aria-selected="true">In-progress</button>
+                                  <button class="nav-link  colorRed" id="nav-done-tab" data-bs-toggle="tab" data-bs-target="#nav-done" type="button" role="tab" aria-controls="nav-done" aria-selected="false">Done</button>
+    
+                                </div>
+                              </nav>
+                              <div class="tab-content" id="nav-tabContent">
+                                <div class="tab-pane fade show active" id="nav-in-progress" role="tabpanel" aria-labelledby="nav-in-progress-tab">
+                                  <div class="left">
+
+                                    <button class="printReportBtn" (click)="printer()" target="_blank">Print Report</button>
+                                    <div class="card  contentToPrint">
+                                        
+                                        <table class="table table-hover" >
+                                            <thead>
+                                              <tr>
+                                                <th scope="col">Staff Name</th>
+                                                <th scope="col">Category</th>
+                                                <th scope="col">Description</th>
+                                                <th scope="col">Venue</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th scope="row">Kamo Hlasa</th>
+                                                <td>Electrical</td>
+                                                <td>Flickering lights</td>
+                                                <td>10-G06</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">dipono minose</th>
+                                                <td>Plumbing</td>
+                                                <td>Water is leaking</td>
+                                                <td>10-G06</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">Kabelo malatji</th>
+                                                <td >Door is broken</td>
+                                                <td>Wood technician</td>
+                                                <td>10-G06</td>
+                                              </tr>
+                                             
+                                            </tbody>
+                                          </table>
                                     </div>
-                                  
-                                    <div class="imgStaffInfo">
-                                        <img src="/assets/images/icon _profile.png" >
-                                        <p class="card-text">{{all.staff_name
-                                        }}<br>{{all.staff_name}}@gmail.com</p>
-                                        <button class = "btn1">View</button>
+                                  </div>
+    
+    
+    
+    
+    
+                                </div>
+                                <div class="tab-pane fade" id="nav-done" role="tabpanel" aria-labelledby="nav-done-tab">
+                                  <div class="left">
+
+                                    <button class="printReportBtn" (click)="printer()" target="_blank">Print Report</button>
+                                    <div class="card  contentToPrint">
+                                        
+                                        <table class="table table-hover" >
+                                            <thead>
+                                              <tr>
+                                                <th scope="col">Staff Name</th>
+                                                <th scope="col">Category</th>
+                                                <th scope="col">Description</th>
+                                                <th scope="col">Venue</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th scope="row">Kamo Hlasa</th>
+                                                <td>Electrical</td>
+                                                <td>Flickering lights</td>
+                                                <td>10-G06</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">dipono minose</th>
+                                                <td>Plumbing</td>
+                                                <td>Water is leaking</td>
+                                                <td>10-G06</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">Kabelo malatji</th>
+                                                <td >Door is broken</td>
+                                                <td>Wood technician</td>
+                                                <td>10-G06</td>
+                                              </tr>
+                                             
+                                            </tbody>
+                                          </table>
                                     </div>
-                                    
+                                  </div>
+    
+    
                                 </div>
+                               
                             </div>
-                        </div>-->
-                        
-                        <nav class="navtab">
-                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                              <button class="nav-link active colorAmber" id="nav-in-progress-tab" data-bs-toggle="tab" data-bs-target="#nav-in-progress" type="button" role="tab" aria-controls="nav-in-progress" aria-selected="true">In-progress</button>
-                              <button class="nav-link colorRed" id="nav-done-tab" data-bs-toggle="tab" data-bs-target="#nav-done" type="button" role="tab" aria-controls="nav-done" aria-selected="false">Done</button>
-
-                            </div>
-                          </nav>
-                          <div class="tab-content" id="nav-tabContent">
-                            <div class="tab-pane fade show active" id="nav-in-progress" role="tabpanel" aria-labelledby="nav-in-progress-tab">
-                              <button class="printReportBtn" (click)="printer()" target="_blank">Print Report</button>
-                                <div class="card  contentToPrint">
-                                    
-                                    <table class="table table-hover" >
-                                        <thead>
-                                          <tr>
-                                            <th scope="col">Staff Name</th>
-                                            <th scope="col">Category</th>
-                                            <th scope="col">Description</th>
-                                            <th scope="col">Venue</th>
-                                          </tr>
-                                        </thead>
-                                        <tbody>
-                                          <tr>
-                                            <th scope="row">Kamo Hlasa</th>
-                                            <td>Electrical</td>
-                                            <td>Flickering lights</td>
-                                            <td>10-G06</td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row">dipono minose</th>
-                                            <td>Plumbing</td>
-                                            <td>Water is leaking</td>
-                                            <td>10-G06</td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row">Kabelo malatji</th>
-                                            <td >Door is broken</td>
-                                            <td>Wood technician</td>
-                                            <td>10-G06</td>
-                                          </tr>
-                                         
-                                        </tbody>
-                                      </table>
-                                </div>
-
-
-
-
-
-                            </div>
-                            <div class="tab-pane fade" id="nav-done" role="tabpanel" aria-labelledby="nav-done-tab">
-                                <button class="printReportBtn" (click)="printer()" target="_blank">Print Report</button>
-                                <div class="card contentToPrint ">
-                                    <table class="table table-hover" >
-                                        <thead>
-                                          <tr>
-                                            <th scope="col">Artisan Name</th>
-                                            <th scope="col">Email</th>
-                                            <th scope="col">Tel Number</th>
-                                            <th scope="col">Assign Artisan</th>
-                                          </tr>
-                                        </thead>
-                                        <tbody>
-                                          <tr>
-                                            <th scope="row">Kamo Hlasa</th>
-                                            <td>hlasaK@mail.ac.za</td>
-                                            <td>0810539853</td>
-                                            <td><button class="assignButton" >Assign</button></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row">dipono minose</th>
-                                            <td>hlasaK@mail.ac.za</td>
-                                            <td>0810539853</td>
-                                            <td><button class="assignButton" >Assign</button></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row">dipono minos</th>
-                                            <td >hlasaK@mail.ac.za</td>
-                                            <td>0810539853</td>
-                                            <td><button class="assignButton" >Assign</button></td>
-                                          </tr>
-                                          <tr>
-                                            <th scope="row"></th>
-                                            <td ></td>
-                                            <td>0810539853</td>
-                                            <td><button class="assignButton" >Assign</button></td>
-                                          </tr>
-                                        </tbody>
-                                      </table>
-                                </div>
-
-
-
-                            </div>
-                           
-                        </div>
+             
+                    </div>
+                              
+                  </div>
+  
+      
+                 
+              </div>
+       
          
-                </div>
-            </form>
-        </div>
+         
+
+
+
+      </div>
+
+  </div>
+  <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
+  </footer> 
 </body>
 
