--- a/src/app/create-new-artisan/create-new-artisan.component.html
+++ b/src/app/create-new-artisan/create-new-artisan.component.html
@@ -43,35 +43,36 @@
             <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
                 <div>
-                    <form
+                    <form [formGroup]="userForm" (ngSubmit)="submit_artisan()"
                         class="w-100 rounded-1 p-4 border bg-white  mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8 px-xl-0 px-xxl-3"
                         enctype="multipart/form-data"> 
                         <!--"form-row row" -->
                         <div class="reqhead1">Create new Artisan</div>
                         <br><br>
+
                         <label for="Id">Tech_Id :</label>
-                        <input formcontrolName="Tech_Id" type="text" class="form-control mb-2" id="id" name="id" [(ngModel)]="tech_form.id"
+                        <input formControlName="id" type="text" class="form-control mb-2" id="id" name="id" 
                             placeholder="Enter your Id"><br>
                         <!-- <div *ngIf="userForm.controls ['id'].touched && userForm.controls['id'].invalid">
                             <span *ngIf="userForm.controls ['id'].errors['required']">This field is mandatory.</span>
                         </div> -->
 
                         <label for="name">Name : </label>
-                        <input formcontrolName="Name" type="text" class="form-control mb-2" id="name" name="name" [(ngModel)]="tech_form.name"
+                        <input formControlName="name" type="text" class="form-control mb-2" id="name" name="name" 
                             placeholder="Enter your name"><br>
                         <!-- <div *ngIf="userForm.controls ['name'].touched && userForm.controls['name'].invalid">
                             <span *ngIf="userForm.controls ['name'].errors['required']">This field is mandatory.</span>
                         </div> -->
 
                         <label for="surname">Surname :</label>
-                        <input formcontrolName="Surname" type="text" class="form-control mb-2" id="surname" 
+                        <input formControlName="surname" type="text" class="form-control mb-2" id="surname" 
                             name="surname" placeholder="Enter your surname"><br>
                         <!-- <div *ngIf="userForm.controls ['surname'].touched && userForm.controls['surname'].invalid">
                             <span *ngIf="userForm.controls ['surname'].errors['required']">This field is mandatory.</span>
                         </div> -->
 
                         <label for="phone">phone :</label>
-                        <input formcontrolName="Phone" type="text" class="form-control mb-2" id="phone" name="phone" 
+                        <input formControlName="phone" type="text" class="form-control mb-2" id="phone" name="phone" 
                             placeholder="Enter your phone"><br>
                         <!-- <div *ngIf="userForm.controls ['phone'].touched && userForm.controls['phone'].invalid">
                             <span *ngIf="userForm.controls ['phone'].errors['required']">This field is mandatory.</span>
@@ -80,7 +81,7 @@
                         </div> -->
 
                         <label for="email">email :</label>
-                        <input formcontrolName="email" type="text" class="form-control mb-2" id="email" name="email" 
+                        <input formControlName="email" type="text" class="form-control mb-2" id="email" name="email"
                             placeholder="Enter your email"><br>
                         <!-- <div *ngIf="userForm.controls ['email'].touched && userForm.controls['email'].invalid">
                             <span *ngIf="userForm.controls ['email'].errors['required']">This field is mandatory.</span>
@@ -89,13 +90,13 @@
                         </div> -->
 
                         <label for="gender">Gender :</label>
-                        <select id="gender" name="gender">
+                        <select formControlName="gender" id="gender" name="gender" >
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select><br>
 
                         
-                      <input type="submit" (click)="submit_artisan()" placeholder="Register">
+                      <input type="submit" placeholder="Register">
                     </form>
                 </div>
             </div>
